<resources>
    <string name="app_name">After Sales Pindad</string>
    <string name="title_text">After Sales\nPindad</string>

    <!-- Sign-in status messages -->
    <string name="sign_in">Sign In</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_out">Signed out</string>
    <string name="loading">Loading…</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Catalogue</string>
    <string name="title_dashboard">Faq</string>
    <string name="title_notifications">More</string>
    <string name="action_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_view_item_1"> Profil </string>
    <string name="navigation_view_item_2"> FAQ  </string>
    <string name="navigation_view_item_3"> Term and Condition  </string>
    <string name="navigation_view_item_4"> Privacy and Policy </string>
    <string name="navigation_view_item_5"> Log Out </string>
    <string name="navigasi_kategori_1">Menu</string>


    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="read_file">This app needs access to your file storage so that it can read photos.</string>

</resources>
