<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigasi_kategori_1"
        android:title="@string/navigasi_kategori_1">
        <menu>
            <item
                android:id="@+id/navigation1"
                android:checkable="true"
                android:icon="@drawable/ic_perm_identity_black_24dp"
                android:title="@string/navigation_view_item_1" />
            <item
                android:id="@+id/navigation2"
                android:checkable="true"
                android:icon="@drawable/ic_book_black_24dp"
                android:title="@string/navigation_view_item_3" />
            <item
                android:id="@+id/navigation3"
                android:checkable="true"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/navigation_view_item_4" />
            <item
                android:id="@+id/navigation5"
                android:checkable="true"
                android:icon="@drawable/ic_video_library_black_24dp"
                android:title="Video" />
            <item
                android:id="@+id/navigation6"
                android:checkable="true"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="Quisioner" />
            <item
                android:id="@+id/navigation4"
                android:checkable="true"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/navigation_view_item_5" />
        </menu>
    </item>
</menu>